# Research_Sexism_Detection

./: README.md  pyproject.toml  requirements.txt  student_model.py  train_distill.py  train_distillation_example.py  train_distillation_pipeline.py
configs/: teacher_checkpoints.example.yaml
scripts/: train_distillation_example.py  train_distillation_pipeline.py
sexism_distillation/: __init__.py
sexism_distillation/compression/: rule_based.py
sexism_distillation/evaluation/: __init__.py  metrics.py
sexism_distillation/losses/: distillation.py
sexism_distillation/models/: student.py  teacher.py
sexism_distillation/pipelines/: __init__.py  example.py  pipeline.py
sexism_distillation/search/: nas_controller.py
tests/: test_repository_structure.py  test_rule_based.py
